--- a/05-pipelineAPP/ansible/k8s-deploy/mysql-configmap-dev.yml
+++ b/05-pipelineAPP/ansible/k8s-deploy/mysql-configmap-dev.yml
@@ -5,6 +5,6 @@ metadata:
 data:
   USER: root
   # PASSWORD: {{ DB_PASSWORD }}
-  DATABASE_URL: mysql://10.99.43.254:3306/SpringWebYoutubeTest?useTimezone=true&serverTimezone=UTC
+  DATABASE_URL: mysql://ec2-18-229-143-83.sa-east-1.compute.amazonaws.com:3306/SpringWebYoutubeTest?useTimezone=true&serverTimezone=UTC
   
   # DATABASE_URL: mysql://10.111.41.255:3306/SpringWebYoutubeTest?useTimezone=true&serverTimezone=UTC # caso esteja vinculando um clusterIP na mão
