--- a/05-pipelineAPP/ansible/k8s-deploy/mysql-configmap-prod.yml
+++ b/05-pipelineAPP/ansible/k8s-deploy/mysql-configmap-prod.yml
@@ -5,7 +5,7 @@ metadata:
 data:
   USER: root
   #PASSWORD: {{ DB_PASSWORD }}
-  DATABASE_URL: mysql://10.99.43.182:3306/SpringWebYoutubeTest?useTimezone=true&serverTimezone=UTC
+  DATABASE_URL: mysql://ec2-54-94-32-201.sa-east-1.compute.amazonaws.com:3306/SpringWebYoutubeTest?useTimezone=true&serverTimezone=UTC
   
   
   # DATABASE_URL: mysql://10.111.41.255:3306/SpringWebYoutubeTest?useTimezone=true&serverTimezone=UTC # caso esteja vinculando um clusterIP na mão
