--- a/04-pipelineSQL/ansible/provisionar.yml
+++ b/04-pipelineSQL/ansible/provisionar.yml
@@ -57,6 +57,11 @@
         path: /etc/mysql/mysql.conf.d/mysqld.cnf
         regexp: '^mysqlx-bind-address'
         line: 'mysqlx-bind-address = 0.0.0.0'
+
+    - name: "Libera permissão para acesso externo a database"
+      become: yes
+      shell: "mysql -u root -proot --execute=\"CREATE USER 'root'@'%' IDENTIFIED BY 'root'; GRANT ALL PRIVILEGES ON *.* TO 'root'@'%'; FLUSH PRIVILEGES;\""
+
     
     # TODO descobrir como fazer isso
     # CREATE USER 'root'@'127.0.0.1' IDENTIFIED WITH mysql_native_password BY '';
